--- a/stylesheet.css
+++ b/stylesheet.css
@@ -261,12 +261,12 @@ header {
 }
 
 .two-table td {
-  width: 50%;
+  width: 33%;
 }
-
 
 .table-culm {
   width: 100%;
+  height: 100px;
 
 }
 
@@ -286,12 +286,13 @@ header {
 }
 
 .top-book img {
-  height: 170px;
-  margin-left: 15%;
-  margin-right: 15%;
+  height: 110px;
+  margin-bottom: 30px;
+  margin-left: 10%;
+  margin-right: 10%;
   vertical-align: middle;
   border-radius: 3%;
-  width: 70%;
+  width: 80%;
   box-shadow: 8px 8px 4px gray;
   
 }
@@ -299,15 +300,16 @@ header {
 .top-book p {
   position: absolute;
   top: 25%;
-  left: 35%;
+  left: 10%;
+  right: 10%;
   text-align: center;
-  font-size: 30px;
+  font-size: 23px;
   font-weight: bold;
   user-select: none;
 }
 
 .top-book a {
-  color: blue;
+  color: rgb(0, 13, 131);
   text-decoration: none;
 }
 
@@ -315,6 +317,7 @@ header {
   color: #5983ff;
   transition: color .3s;
 }
+
 
 
 .top-boad img {
@@ -419,6 +422,34 @@ footer {
 }
 
 
+/* 幼き日のCSS */
+
+.osanakihi_table{
+  background: -moz-linear-gradient(left,
+    rgba(255,0,0,0.2),
+    rgba(255,69,0,0.2),
+    rgba(255,255,0,0.2),
+    rgba(0,128,0,0.2),
+    rgba(0,0,255,0.2),
+    rgba(75,0,130,0.2),
+    rgba(238,130,238,0.2)
+  );
+  background: -webkit-gradient(linear, left center, right center,
+    from(rgba(255,0,0,0.2)),
+    color-stop(14%, rgba(255,69,0,0.2)),
+    color-stop(28%, rgba(255,255,0,0.2)),
+    color-stop(42%, rgba(0,128,0,0.2)),
+    color-stop(56%, rgba(0,0,255,0.2)),
+    color-stop(70%, rgba(75,0,130,0.2)),
+    to(rgba(238,130,238,0.2))
+  );
+}
+
+.osanaki_title{
+  margin-top: 10px;
+  text-align: center;
+  font-size: 25px;
+}
 
 
 /*-------  ここからハンバーガー  --------*/
