--- a/stylesheet.css
+++ b/stylesheet.css
@@ -381,6 +381,7 @@ header {
 }
 
 .menu-title h2 {
+  font-size: 18px;
   text-align: start;
   margin-top: -5px;
   padding: -10px;
@@ -449,6 +450,73 @@ footer {
   margin-top: 10px;
   text-align: center;
   font-size: 25px;
+}
+
+/* 女性文化賞 */
+
+.bunka_table {
+  margin: 0 auto;
+  border-color: #3cb3e4;
+  border-width: 5px;
+}
+
+.bunka_font {
+  color: green;
+}
+
+.bunka_title {
+  width: 500px;
+  margin: 0 auto;
+  padding: 10px 0;
+  font-family: sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  color:#3cb3e4;
+}
+
+.bunka_subtitle {
+  font-size: 20px;
+  text-align: center;
+}
+
+.bunka_table a{
+  color: black;
+}
+
+.bunka_table a:hover {
+  color: blue;
+}
+
+.heading {
+  margin: 10px 0
+}
+.bunka_title4 .heading {
+  padding: 15px 5px;
+  margin: 10px -20px;
+  border: solid 3px #3cb3e4;
+  position:relative;
+  text-align: center;
+  border-radius: 3px;
+  background: #fff;
+}
+.bunka_title4 .heading:after,
+.bunka_title4 .heading:before {
+  content: '';
+  position: absolute;
+  bottom: -7px;
+  background: #3cb3e4;
+  border: solid 2px #3cb3e4;
+  width: 25px;
+  height: 20px;
+  z-index: -1;
+}
+.bunka_title4 .heading:after {
+     left: 2px;
+     transform: rotate(120deg);
+}
+.bunka_title4 .heading:before {
+    right: 2px;
+    transform: rotate(60deg);
 }
 
 
