--- a/stylesheet.css
+++ b/stylesheet.css
@@ -773,9 +773,15 @@ footer {
 
 .omoide_table {
   margin: 0 auto;
+  padding-top: 40px;
+  padding-left: 10px;
+  padding-right: 10px;
   text-align: center;
-  width: 70%;
+  width: 85%;
   table-layout: fixed;
+  background-image: url(./omoide_img/omoide_table_back.jpg);
+  box-shadow: 10px 10px 4px gray;
+  margin-bottom: 50px;
 }
 
 .omoide_table p {
@@ -789,21 +795,11 @@ footer {
   padding-bottom: 80px;
 }
 
-/* .omoide_table td img{
-  height: 400px;
-  width: 300px;
-} */
-
-.omoide_title {
-  text-align: center;
-}
-
 .omoide_font {
   text-align: left;
-  padding-left: 30px;
+  padding-left: 40px;
+  padding-right: 30px;
 }
-
-
 
 .omoide_title {
   width: 60%;
@@ -815,8 +811,8 @@ footer {
   box-shadow: 0px 0px 0px 5px #ffd2ff ;
   border: dashed 2px white;
   padding: 0.2em 0.5em;
-  margin-top: 20px;
-  margin-bottom: 40px;
+  margin-top: 30px;
+  margin-bottom: 60px;
 }
 
 .omoide_title span {
