--- a/stylesheet.css
+++ b/stylesheet.css
@@ -910,6 +910,59 @@ body {
   color: #507cff;
 }
 
+/* 公演予定ページ */
+.kouen_yotei_body {
+  margin-top: 100px;
+  color: black;
+  background-image: url(img/mail_back.jpg);
+}
+
+.kouen_main_div {
+  font-size: 20px;
+}
+
+.kouen_title {
+  width: 450px;
+  font-size: 25px;
+  text-align: center;
+  margin: 0 auto;
+  font-weight: bold;
+  background: rgb(255, 199, 95);
+  box-shadow: 0px 0px 0px 5px rgb(255, 199, 95);
+  border: dashed 3px white;
+  padding: 0.8em 0.9em;
+  margin-top: 20px;
+  margin-bottom: 15px;
+}
+
+.kouen_main {
+  width: 50%;
+  font-size: 18px;
+  margin: 0 auto;
+  background: whitesmoke;
+  box-shadow: 0px 0px 0px 5px whitesmoke;
+  border: dashed 1px black;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 200px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+.kouen_yotei_mail {
+  text-align: center;
+  
+}
+
+.kouen_yotei_body a {
+  color: blue;
+}
+
+.kouen_yotei_body a:hover {
+  color: #507cff;
+}
+
+
 /* 家族旅行ページ */
 .trip_body {
   margin-top: 90px;
