--- a/stylesheet.css
+++ b/stylesheet.css
@@ -936,20 +936,20 @@ body {
 }
 
 .kouen_main {
-  width: 50%;
-  font-size: 18px;
+  width: 60%;
+  font-size: 22px;
   margin: 0 auto;
   background: whitesmoke;
   box-shadow: 0px 0px 0px 5px whitesmoke;
   border: dashed 1px black;
   padding-top: 20px;
   padding-bottom: 20px;
-  padding-left: 200px;
+  padding-left: 180px;
   margin-top: 30px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 
-.kouen_yotei_mail {
+.kouen_yotei_bikou {
   text-align: center;
   
 }
