--- a/stylesheet.css
+++ b/stylesheet.css
@@ -949,6 +949,20 @@ body {
   margin-bottom: 40px;
 }
 
+.kouen_main_mitei {
+  width: 550px;
+  font-size: 22px;
+  margin: 0 auto;
+  background: whitesmoke;
+  box-shadow: 0px 0px 0px 5px whitesmoke;
+  border: dashed 1px black;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
 .kouen_yotei_bikou {
   text-align: center;
   
