--- a/stylesheet.css
+++ b/stylesheet.css
@@ -944,7 +944,8 @@ body {
   border: dashed 1px black;
   padding-top: 20px;
   padding-bottom: 20px;
-  padding-left: 180px;
+  padding-left: 120px;
+  padding-right: 80px;
   margin-top: 30px;
   margin-bottom: 40px;
 }
