--- a/stylesheet.css
+++ b/stylesheet.css
@@ -942,12 +942,13 @@ body {
   background: whitesmoke;
   box-shadow: 0px 0px 0px 5px whitesmoke;
   border: dashed 1px black;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left:120px;
-  padding-right: 80px;
   margin-top: 30px;
   margin-bottom: 40px;
+}
+
+.kouen_main p {
+  padding: 10px 10%;
+
 }
 
 .kouen_main_mitei {
@@ -974,6 +975,74 @@ body {
 }
 
 .kouen_yotei_body a:hover {
+  color: #507cff;
+}
+
+/* お知らせページ */
+.osirase_body {
+  margin-top: 100px;
+  color: black;
+  background-image: url(img/mail_back.jpg);
+}
+
+.osirase_main_div {
+  font-size: 20px;
+}
+
+.osirase_title {
+  width: 320px;
+  font-size: 25px;
+  text-align: center;
+  margin: 0 auto;
+  font-weight: bold;
+  background: rgb(255, 199, 95);
+  box-shadow: 0px 0px 0px 5px rgb(255, 199, 95);
+  border: dashed 3px white;
+  padding: 0.8em 0.9em;
+  margin-top: 20px;
+  margin-bottom: 15px;
+}
+
+.osirase_main {
+  width: 60%;
+  font-size: 22px;
+  margin: 0 auto;
+  background: whitesmoke;
+  box-shadow: 0px 0px 0px 5px whitesmoke;
+  border: dashed 1px black;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left:120px;
+  padding-right: 80px;
+  margin-top: 30px;
+  margin-bottom: 40px;
+}
+
+.osirase_main_box {
+    width: 50%;
+    padding: 1em 1.5em;
+    margin: 2em auto;
+    background-color:#ffffe0;/*背景色*/
+    border: dotted 6px #ffa500;/*線*/
+    color:#000000;/*文字色*/
+}
+.osirase_main_box p {
+  font-size: 22px;
+    margin: 0; 
+    padding: 10px 0;
+    text-align: center;
+}
+
+.osirase_bikou {
+  text-align: center;
+  
+}
+
+.osirase_body a {
+  color: blue;
+}
+
+.osirase_body a:hover {
   color: #507cff;
 }
 
